<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/background">

    <Button
        android:id="@+id/wheis"
        android:layout_width="@dimen/width_button"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:text="@string/button_wheis" 
        android:drawableLeft="@drawable/int1"
        android:drawableRight="@drawable/int2"
        android:onClick="goWheis"
        style="@style/st_button"/>

    <Button
        android:id="@+id/registrar"
        android:layout_width="@dimen/width_button"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wheis"
        android:layout_below="@+id/wheis"
        android:layout_marginTop="40dp"
        android:text="@string/button_reg"
        android:drawableRight="@drawable/registrar"
        android:onClick= "goRegi"
        style="@style/st_button"/>

    <Button
        android:id="@+id/historial"
        android:layout_width="@dimen/width_button"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registrar"
        android:layout_below="@+id/registrar"
        android:layout_marginTop="40dp"
        android:text="@string/button_history"
        android:drawableLeft="@drawable/historial" 
        android:onClick="goHist"
      	style="@style/st_button"/>

</RelativeLayout>